<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/titleFragment">

    <fragment
        android:id="@+id/titleFragment"
        android:name="com.example.billingseparator.title.TitleFragment"
        android:label="@string/app_name"
        tools:layout="@layout/title_fragment">
        <action
            android:id="@+id/action_titleFragment_to_billsFragment"
            app:destination="@id/billsFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out" />
    </fragment>
    <fragment
        android:id="@+id/paramsFragment"
        android:name="com.example.billingseparator.params.ParamsFragment"
        android:label="@string/title_participants"
        tools:layout="@layout/params_fragment" >
        <action
            android:id="@+id/action_paramsFragment_to_productsFragment"
            app:destination="@id/productsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
        <argument
            android:name="billId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.billingseparator.result.ResultFragment"
        android:label="@string/title_results"
        tools:layout="@layout/result_fragment" >
        <argument
            android:name="billId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/productsFragment"
        android:name="com.example.billingseparator.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/products_fragment" >
        <action
            android:id="@+id/action_productsFragment_to_resultFragment"
            app:destination="@id/resultFragment"
            app:enterAnim="@anim/fade_in_left"
            app:popUpTo="@+id/paramsFragment" />
        <argument
            android:name="billId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/billsFragment"
        android:name="com.example.billingseparator.bills.BillsFragment"
        android:label="@string/text_bills_header"
        tools:layout="@layout/bills_fragment">
        <action
            android:id="@+id/action_billsFragment_to_paramsFragment"
            app:destination="@id/paramsFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/fade_out"
            app:popExitAnim="@anim/fade_out" />
    </fragment>
</navigation>