<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="productsViewModel"
            type="com.example.billingseparator.products.ProductsViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".products.ProductsFragment">


        <TextView
            android:id="@+id/tv_title_new_products"
            style="@style/tv_titles_style"
            android:text="@string/add_products" />

        <EditText
            android:id="@+id/et_product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/et_margin"
            android:layout_marginTop="@dimen/et_margin"
            android:layout_marginEnd="@dimen/et_margin"
            android:layout_marginBottom="@dimen/et_margin"
            android:ems="10"
            android:hint="@string/enter_product_name"
            android:inputType="textPersonName|textCapSentences|textCapWords"
            android:textAlignment="viewStart" />

        <EditText
            android:id="@+id/et_product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/et_margin"
            android:layout_marginTop="@dimen/et_margin"
            android:layout_marginEnd="@dimen/et_margin"
            android:layout_marginBottom="@dimen/et_margin"
            android:ems="10"
            android:hint="@string/hint_price"
            android:inputType="numberDecimal" />


        <TextView
            android:id="@+id/tv_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_label"
            android:fontFamily="monospace"
            android:text="@string/participants"
            android:textSize="18sp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/svParticipantsList"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="@dimen/sv_margin"
            android:layout_marginTop="@dimen/sv_margin"
            android:layout_marginRight="@dimen/sv_margin"
            android:layout_marginBottom="@dimen/sv_margin">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGpRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >


            </com.google.android.material.chip.ChipGroup>

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cl_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAdd"
                style="@android:style/Widget.Material.Button.Colored"
                android:layout_width="107dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="@+id/btnClear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.156"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                tools:targetApi="m" />

            <Button
                android:id="@+id/btnClear"
                style="@style/btn_clear"
                android:onClick="@{() -> productsViewModel.onProductDelete()}"
                android:text="@string/clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/btnAdd"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_bill_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_label"
            android:fontFamily="monospace"
            android:text="@string/sumary"
            android:textSize="18sp" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/svSummaryProductsList"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="@dimen/sv_margin"
            android:layout_marginTop="@dimen/sv_margin"
            android:layout_marginRight="@dimen/sv_margin"
            android:layout_marginBottom="@dimen/sv_margin">

            <TableLayout
                android:id="@+id/tl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
                android:stretchColumns="*"
                android:background="@android:color/white"
                android:padding="6dp"
                >
                <TableRow
                    android:id="@+id/tr_header"
                    android:background="@drawable/table_row_bg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_product"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/table_cell_bg"
                        android:paddingRight="10dp"
                        android:text="@string/enter_product_name"
                        android:textAppearance="@android:style/TextAppearance.Material"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingLeft="10dp"
                        android:text="@string/hint_price"
                        android:textColor="@color/design_default_color_on_secondary"
                        android:textStyle="bold" />
                </TableRow>

                <!--
                <include layout="@layout/sample_table_row" />
                 -->

            </TableLayout>


        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_calculate"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="265dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/btn_margin"
            android:background="@android:color/holo_green_dark"
            android:text="@string/calculate"
            android:onClick="@{() -> productsViewModel.onCalculate()}"
            android:textSize="18sp" />


    </LinearLayout>
    </ScrollView>
</layout>